--- a/contact.css
+++ b/contact.css
@@ -4,6 +4,8 @@
     --highlight-color: orange;
     --background-color: rgba(255, 165, 0, 0.5);
     --hover-color: #ff4500;
+    --gradient-start: #ff7e5f;
+    --gradient-end: #feb47b;
 }
 
 body {
@@ -12,12 +14,19 @@ body {
     line-height: 1.6;
 }
 
+main{
+    display:flex;
+    align-items:flex-start;
+    justify-content: space-around;
+
+}
+
 .top-text {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
-    background-color: var(--background-color);
+    background: linear-gradient(to right, var(--gradient-start), var(--gradient-end));
     padding: 10px 20px;
 }
 
@@ -55,6 +64,19 @@ header h1 {
     padding-left: 30px;
 }
 
+.requirements{
+    font-size: 50px;
+    margin-top: 190px;
+    margin-right: 200px;
+    
+}
+
+
+
+.main-part{
+    margin-left: 400px;
+}
+
 .image,
 .navigation,
 .digital-info {
@@ -63,13 +85,33 @@ header h1 {
     align-items: center;
 }
 
-.job-list {
-    padding-top: 30px;
-    justify-content: space-around;
+.vacancies-header{
+    font-size: 65px;
+    margin-top: 200px;
 }
+
+.job-list {
+    
+    
+    border: 4px solid orange; 
+    border-radius: 15px; 
+    padding: 90px;
+    
+}
+
+.requirements a {
+    text-decoration: none; 
+    color: blue; 
+  }
+  
+  .requirements a:hover {
+    color: var(--hover-color); 
+  }
 
 .job {
     text-align: center;
+    padding-bottom: 40px;
+    
 }
 
 .experience {
@@ -87,3 +129,80 @@ header h1 {
     text-align: center;
 }
 
+footer {
+    margin-top: 640px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    background-color: var(--background-color);
+    
+}
+
+
+@media (max-width: 1895px){
+    main{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+
+@media (max-width: 1330px) {
+    
+    .main-part{
+        margin-left: 250px;
+    }
+    
+
+
+
+}
+
+
+@media (max-width: 1200px) {
+    
+    .main-part{
+        margin-left: 30px;
+    }
+    
+
+    .requirements{
+        font-size: 50px;
+        margin-top: 70px;
+        margin-right: 30px;
+        
+    }
+
+}
+
+
+@media (max-width: 768px) {
+
+    body {
+        font-size: 30px;
+    }
+
+    .requirements{
+        font-size: 30px;
+    }
+
+    .top-text {
+        
+        align-items: flex-start;
+    }
+
+    .links {
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 0;
+    }
+
+
+
+    .links a {
+        font-size: 25px;
+        margin-left: 0;
+        padding-left: 18px;
+        
+    }
+}
