--- a/index.css
+++ b/index.css
@@ -138,6 +138,76 @@ footer {
     
 }
 
+
+
+/*--------------------------------- */
+
+
+.links a, .bt-form {
+    transition: all 0.3s ease-in-out;
+}
+
+
+@keyframes textAppearance {
+    from {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.image-text h2, .image-text p {
+    animation: textAppearance 0.8s ease-in-out;
+}
+
+
+.image img {
+    transition: transform 0.4s ease-in-out;
+}
+
+.image img:hover {
+    transform: scale(1.1) rotate(3deg);
+}
+
+
+@keyframes logoSpin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+
+
+.bt-form:hover {
+    transform: scale(1.1);
+}
+
+
+@keyframes loadingIcon {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.logo {
+    animation: loadingIcon 5s linear infinite;
+}
+
+/*--------------------------------- */
+
 @media (max-width: 1550px) {
     .image{
         flex-direction: column;
