--- a/index.css
+++ b/index.css
@@ -174,14 +174,13 @@ footer {
 
 
 @keyframes logoSpin {
-    0% {
+    from {
         transform: rotate(0deg);
     }
-    100% {
+    to {
         transform: rotate(360deg);
     }
 }
-
 
 
 
@@ -190,20 +189,10 @@ footer {
 }
 
 
-@keyframes loadingIcon {
-    0% {
-        transform: rotate(0deg);
-    }
-    50% {
-        transform: rotate(180deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
+
 
 .logo {
-    animation: loadingIcon 5s linear infinite;
+    animation: logoSpin 5s linear infinite;
 }
 
 /*--------------------------------- */
